--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,12 @@
   <link rel="stylesheet" href="../assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="../assets/css/animate.min.css">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8670107159603079",
+            enable_page_level_ads: true
+       });
+  </script>
 </head>
