--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header id="top">
     <!-- <a href="{{ site.baseurl }}/"  class="headImg"></a> -->
     <div class="wrapper">
-        <a href="{{ site.baseurl }}/" class="brand">{{ site.title }}</a>
+        <!-- <a href="{{ site.baseurl }}/" class="brand">{{ site.title }}</a> -->
+        <a href="http://www.freeiptv.cn/" class="brand" title="免费IPTV网络电视资源">FreeIPTV.CN</a>
         <button id="headerMenu" class="menu"><i class="fa fa-bars"></i></button>
         <nav id="headerNav">
             <ul>
@@ -13,6 +14,18 @@
                 </li>
 
                 <li>
+                    <a href="http://freeiptvcn.github.io/" class="nav_a">
+                        IPTV工具
+                    </a>
+                </li>
+
+                <li>
+                    <a href="http://freeiptvcn.github.io/" class="nav_a active">
+                        技术文章
+                    </a>
+                </li>
+
+                <!-- <li>
                     {% if page.url == '/' %}
                     <a class="active" href="{{site.baseurl}}/">
                         {% else %}
@@ -20,7 +33,7 @@
                     {% endif %}
                         文章
                     </a>
-                </li>
+                </li> -->
 
                 <!-- {% for my_page in site.pages %}
                     {% if my_page.type == 'page' %}
