--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,20 +7,18 @@
         <nav id="headerNav">
             <ul>
                 <li>
-
                     <a href="http://freeiptv.cn/">
                         首页
                     </a>
                 </li>
-
                 <li>
-                    <a href="http://freeiptvcn.github.io/" class="nav_a">
+                    <a href="http://freeiptv.cn/blog/category/#IPTV工具" class="nav_a">
                         IPTV工具
                     </a>
                 </li>
 
                 <li>
-                    <a href="http://freeiptvcn.github.io/" class="nav_a active">
+                    <a href="http://freeiptv.cn/blog/" class="nav_a active">
                         技术文章
                     </a>
                 </li>
