--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
                 <a target="_blank">免责声明</a><span>|</span>
                 <a target="_blank">联系我们</a><span>|</span>
                 <a target="_blank">在线留言</a></div>
-            <div class="copyright">freeiptv.cn 版权所有@ 2019 京ICP备19007292号-2<br>本站所有内容均来自网络。如侵犯了您的权利，请联系我们删除，感谢您的支持。</div>
+            <div>freeiptv.cn 版权所有@ 2019 京ICP备19007292号-2</div>
         </div>
     </div>
 </footer>
