--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
                 <a target="_blank">免责声明</a><span>|</span>
                 <a target="_blank">联系我们</a><span>|</span>
                 <a target="_blank">在线留言</a></div>
-            <div>freeiptv.cn 版权所有@ 2019 京ICP备19007292号-2</div>
+            <div class="power">freeiptv.cn 版权所有@ 2019 京ICP备19007292号-2</div>
         </div>
     </div>
 </footer>
