--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,7 @@
 
     </script>
     {% endif %}
-    
+
     {% if page.mathjax %}
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({ tex2jax: { inlineMath: [["$","$"],["\\(","\\)"]] }, "HTML-CSS": { linebreaks: { automatic: true, width:
@@ -57,4 +57,12 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
     {% endif %}
+
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-8670107159603079",
+              enable_page_level_ads: true
+         });
+    </script>
 </head>
