--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,9 +35,11 @@
                 <a target="_blank">关于我们</a><span>|</span>
                 <a target="_blank">免责声明</a><span>|</span>
                 <a target="_blank">联系我们</a><span>|</span>
-                <a target="_blank">在线留言</a></div>
-            <div class="power">freeiptv.cn 版权所有@ 2019 京ICP备19007292号-2</div>
+                <a target="_blank">在线留言</a>
+            </div>
+
         </div>
+        <div class="footer">freeiptv.cn 版权所有@ 2019 京ICP备19007292号-2</div>
     </div>
 </footer>
 <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
