--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,4 +42,4 @@
         <div class="footer">freeiptv.cn 版权所有@ 2019 京ICP备19007292号-2</div>
     </div>
 </footer>
-<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
