--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,17 +7,22 @@
         <nav id="headerNav">
             <ul>
                 <li>
-                    <a href="http://freeiptv.cn/">
+                    <a href="http://www.freeiptv.cn/">
                         首页
                     </a>
                 </li>
                 <li>
-                    <a href="http://freeiptv.cn/blog/" class="nav_a active">
+                          <a href="http://www.freeiptv.cn/channel.html" class="nav_a  ">
+                              频道搜索
+                          </a>
+                      </li>
+                <li>
+                    <a href="http://www.freeiptv.cn/blog/" class="nav_a active">
                         技术文章
                     </a>
                 </li>
                 <li>
-                    <a href="http://freeiptv.cn/blog/category/#IPTV工具" class="nav_a">
+                    <a href="http://www.freeiptv.cn/blog/category/#IPTV工具" class="nav_a">
                         IPTV工具
                     </a>
                 </li>
