--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,11 +8,11 @@
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-    <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico?" type="image/x-icon">
+    <link rel="shortcut icon" href="{{  /favicon.ico? | prepend: site.originurl  }}" type="image/x-icon">
+    <link rel="icon" href="{{  /favicon.ico? | prepend: site.originurl  }}" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_8v3czwksspqlg14i.css">
-    <link rel="stylesheet" href="{{ " /assets/css/main.css " | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ " /assets/css/main.css " | prepend: site.originurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ " /feed.xml
         " | prepend: site.baseurl | prepend: site.url }}">
@@ -58,11 +58,4 @@
     </script>
     {% endif %}
 
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({
-              google_ad_client: "ca-pub-8670107159603079",
-              enable_page_level_ads: true
-         });
-    </script>
 </head>
